<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_order_ticket">

    <fragment
        android:id="@+id/navigation_call_doctor"
        android:name="com.oruel.testmydoc.call_doctor.CallDoctorFragment"
        android:label="@string/title_call_doctor"
        tools:layout="@layout/fragment_call_doctor" >
        <action
            android:id="@+id/action_navigation_call_doctor_to_navigation_authorization"
            app:destination="@id/navigation_authorization" />
    </fragment>

    <fragment
        android:id="@+id/navigation_order_ticket"
        android:name="com.oruel.testmydoc.order_ticket.OrderTicketFragment"
        android:label="@string/title_order_ticket"
        tools:layout="@layout/fragment_order_ticket" >
        <action
            android:id="@+id/action_navigation_order_ticket_to_navigation_authorization"
            app:destination="@id/navigation_authorization" />
        <action
            android:id="@+id/action_navigation_order_ticket_to_navigation_call_doctor"
            app:destination="@id/navigation_call_doctor" />
        <action
            android:id="@+id/action_navigation_order_ticket_to_navigation_personal_area"
            app:destination="@id/navigation_personal_area" />
    </fragment>

    <fragment
        android:id="@+id/navigation_authorization"
        android:name="com.oruel.testmydoc.authorization.AuthorizationFragment"
        android:label="@string/title_authorization"
        tools:layout="@layout/fragment_authorization" >
        <action
            android:id="@+id/action_navigation_authorization_to_navigation_order_ticket"
            app:destination="@id/navigation_order_ticket" />
    </fragment>
    <fragment
        android:id="@+id/navigation_personal_area"
        android:name="com.oruel.testmydoc.personal_area.PersonalAreaFragment"
        android:label="@string/title_personal_area"
        tools:layout="@layout/fragment_personal_area" >
        <action
            android:id="@+id/action_navigation_personal_area_to_navigation_order_ticket"
            app:destination="@id/navigation_order_ticket" />
    </fragment>

</navigation>